[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydantic-ai-king-county"
version = "0.1.0"
description = "King County, WA civic data tools for pydantic-ai agents — no API keys required"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Daniel Strader (chaoz23)", email = "chaoz23@gmail.com" }]
requires-python = ">=3.10"
keywords = [
    "pydantic-ai", "agent-tools", "king-county", "washington-state",
    "civic-data", "permits", "contractor-license",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic-ai>=2.0",
    "anyio>=4.0",
]

[project.urls]
Homepage = "https://github.com/chaoz23/pydantic-ai-king-county"
Repository = "https://github.com/chaoz23/pydantic-ai-king-county"
Issues = "https://github.com/chaoz23/pydantic-ai-king-county/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pydantic_ai_king_county"]

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md", "pyproject.toml"]
